--- a/src/main/webapp/WEB-INF/views/books/bookpage.html
+++ b/src/main/webapp/WEB-INF/views/books/bookpage.html
@@ -25,7 +25,7 @@
 
         <form th:method="PATCH" th:action="@{/books/{id}/patch(id=${currentbook.getId()})}" >
             <label for="hname"> Choose to assign book:</label>
-            <select id="hname" th:object="${bo}" th:field="*{humanid}">
+            <select id="hname" th:object="${bo}" th:field="*{humanKey.id}">
                  <option th:each="h : ${allhuman}" th:value="${h.getId()}" th:text="${h.getName()}"></option>
             </select>
 
