--- a/src/main/webapp/WEB-INF/views/index/index.html
+++ b/src/main/webapp/WEB-INF/views/index/index.html
@@ -7,14 +7,23 @@
 <body>
 <h2>Welcome to the library application!</h2>
 
-<form th:method="GET" th:action="@{/books}">
+<form th:method="GET" th:action="@{/books?page='q'&book_per_page='w'}">
     <p>
-        <input type="submit" value="Book list"/>
+        <label hidden="hidden" for="q"></label>
+        <input type=hidden id="q" name="page" value="0">
+        <label hidden="hidden" for="w"></label>
+        <input type="hidden" id="w" name="book_per_page" value="3">
+        <input type="submit" value="Show Books"/>
     </p>
 </form>
 <form th:method="GET" th:action="@{/human}">
     <p>
         <input type="submit" value="Reader list"/>
+    </p>
+</form>
+<form th:method="GET" th:action="@{/books/search}">
+    <p>
+        <input type="submit" value="Search book"/>
     </p>
 </form>
 
