--- a/src/main/webapp/WEB-INF/views/human/page.html
+++ b/src/main/webapp/WEB-INF/views/human/page.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" xmlns:th="http://thymeleaf.org">
+<!--    maybe rename the file accordingly -->
     <title>Human page</title>
 </head>
 <body>
